@@ -1,4 +1,5 @@
 Bugs fixed in 1.7.1a:
+* Fix ansi2knr rules for LIBOBJS sources.
 * Clean all known Texinfo index files, not only those which appear to
   be used, because we cannot know wich indexes are used in included files.
   (PR/375, Debian Bug #168671)
